Fixed clipping with paragraph below

--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ header{
 }
 
 .tito-wrapper {
-		margin-bottom:-27px;
+		margin-bottom:0px;
 }
 
 .tito-ticket-list {
